# data-validator

./: .example.env  .gitignore  Home.py  README.md  REAMDE.md  login.py  pyproject.toml
.devcontainer/: devcontainer.json
pages/: 1_Validator.py  2_Dashboard.py  3_Scraper.py
resources/: jamaican_communities_geocoded.csv
utils/: bigquery_utils.py  scraper_utils.py
